--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "name": "ProjectDemo",
   "version": "1.0.0",
-  "dependencies": {
-    "swagger-client": "3.8.21"
-  }
+  "dependencies": {}
 }
